# aggr_refl

./: CMakeLists.txt  README.md  generate.cpp
include/aggr_refl/: aggregate_reflection.hpp
